# UEMCP

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md
.github/ISSUE_TEMPLATE/: bug.md  contributor.md  wishlist.md
.github/workflows/: win-release-package.yml
Demo/: README.md
Docs/: AIProviderArchitecture.md  Architecture.md  BuildAndPackagingPitfalls.md  CallTool.md  ChatSync.md  CodeTools.md  Contributing.md  DeploymentTroubleshooting.md  FIRST_LAUNCH.md  FabSubmissionChecklist.md  KnowledgeRag.md  KnowledgeRagSources.md  MaterialInstanceTools.md  PackagingIntegrity.md  Patch-2026-05-12-UE56.md  Release-2026-05.md  Release-2026-06.md  Roadmap.md  SecurityModel.md  SelfExtensionPipeline.md  Stage2WindowsVerify.md  Supervisor.md  TaskAtlas.md  ToolNaming.md  UnrealTaskRecipes.md  Verification.md  WindowsCompatibilityLessons.md  WindowsPackaging.md
Schemas/: UnrealMcpActivityLogEntry.schema.json  UnrealMcpExtensionManifest.schema.json  UnrealMcpToolPackageManifest.schema.json  UnrealMcpToolRegistry.schema.json
Source/: UEvolve.Target.cs  UEvolveEditor.Target.cs
Tools/: codex-prompt-header.md  extract_tool_schemas.py  generate_tool_docs.py  install_unrealmcp_to_project.py  package_plugin.ps1  package_plugin.sh  unreal_mcp_fetch_docs.py  unreal_mcp_supervisor.py  validate_tool_registry.py  verify_package_integrity.py
Tools/UEAtelierCli/: README.md  SKILL.md  pyproject.toml
Tools/UEAtelierCli/tests/: conftest.py  test_cli.py  test_mcp_client.py
Tools/UEAtelierCli/ueatelier_cli/: __init__.py  cli.py  mcp_client.py  output.py
(+516 files in other folders)
